--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,13 +2,34 @@ body {
   background-color: #ffe2b0;
 }
 
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+img {
+  height: 100%;
+  width: 30%;
+}
+
 ul {
   text-align: center;
   list-style: none;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  margin-right: 100px;
 }
 
 a {
   font-size: 18px;
   text-decoration: none;
   color: black;
+  margin-top: 50px;
+}
+
+nav {
+  margin-bottom: 20px;
 }
